# Mitt_Vector_Bot

./: .gitignore  GoogleDiskDownload.py  README.md  consts.py  create_qrcode.py  main.py  pyproject.toml
data/files/: презентация.pptx
src/bot/: __main__.py  constants.py  create_qrcode.py  download_file.py  handlers.py
src/mitt_vector_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
